# aida_bot_ws

./: .gitmodules  README.md  compose.yaml  debug_ds4.py  into_ds4.sh
hoverboard_node/: .tmux.conf  README.md  build.sh  dev.sh  dockerfile  entrypoint.bash  entrypoint.sh  into.sh  package.xml  rebuild.sh  run.sh  run_tmux.sh  setup.cfg  setup.py  start_dev.sh  start_ros2_session.sh  start_tmux.sh  teleop_test.py
hoverboard_node/hoverboard_driver/: 99-hoverboard.rules  hoverboard_driver.py  test_rs485.py
hoverboard_node/hoverboard_node/launch/: hoverboard_driver.launch.py
hoverboard_node/install/: local_setup.sh  setup.sh
hoverboard_node/install/hoverboard_node/lib/hoverboard_node/: hoverboard_driver  manual_wheel_control  test_rs485
hoverboard_node/install/hoverboard_node/share/hoverboard_node/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
hoverboard_node/install/hoverboard_node/share/hoverboard_node/launch/: hoverboard_driver.launch.py
hoverboard_node/log/: latest_build
hoverboard_node/resource/: hoverboard_node
hoverboard_node/test/: test_copyright.py  test_flake8.py  test_pep257.py
src/: ds4_driver  ds4_driver_msgs  hoverboard_node
